--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   firebase_storage: ^11.1.0
   cloud_firestore: ^4.5.0
   permission_handler: ^10.2.0
+  clipboard: ^0.1.3
+  blue_thermal_printer: ^1.2.3
 
 dev_dependencies:
   flutter_test:
