--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   permission_handler: ^10.2.0
   clipboard: ^0.1.3
   blue_thermal_printer: ^1.2.3
+  pdf: ^3.6.4
+  mailer: ^6.0.1
 
 dev_dependencies:
   flutter_test:
