--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   blue_thermal_printer: ^1.2.3
   pdf: ^3.6.4
   mailer: ^6.0.1
+  image_picker: ^0.8.7+5
 
 dev_dependencies:
   flutter_test:
